// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen dark theme 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        {
          "backgroundColor": "#000",
        },
      ]
    }
  >
    <RCTSafeAreaView
      style={
        [
          {
            "backgroundColor": "#171717",
            "elevation": 4,
            "zIndex": 0,
          },
          {
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 3,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 4,
          },
        ]
      }
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#171717",
            "elevation": 0,
            "flexDirection": "row",
            "height": 56,
            "marginTop": 0,
            "paddingHorizontal": 4,
          }
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          hitSlop={
            {
              "bottom": 6,
              "left": 6,
              "right": 6,
              "top": 6,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "margin": 6,
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 18,
                  "height": 36,
                  "width": 36,
                },
                undefined,
                undefined,
              ],
            ]
          }
        >
          <View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  {
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "transform": [
                      {
                        "rotate": "0deg",
                      },
                    ],
                  }
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#ffffff",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󰋜
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "flex": 1,
                "paddingHorizontal": 12,
              },
              [
                {
                  "marginLeft": 8,
                },
                {
                  "alignItems": "center",
                },
                undefined,
              ],
            ]
          }
        >
          <Text
            accessibilityRole="header"
            accessibilityTraits="header"
            accessible={true}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#FFF",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                {
                  "textAlign": "left",
                },
                [
                  {
                    "color": "#ffffff",
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  {
                    "fontSize": 17,
                  },
                  undefined,
                ],
              ]
            }
          />
        </View>
        <View
          style={
            {
              "width": 48,
            }
          }
        />
      </View>
    </RCTSafeAreaView>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "space-around",
        }
      }
    >
      <View>
        <Text
          style={
            [
              {
                "color": "#FFF",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(255, 255, 255, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "500",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  {
                    "fontSize": 24,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                ],
              ],
            ]
          }
        >
          Welcome to the Trivia Challenge!
        </Text>
      </View>
      <View>
        <Text
          style={
            [
              {
                "color": "#FFF",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(255, 255, 255, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 14,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                    "marginVertical": 2,
                  },
                  {
                    "fontSize": 24,
                    "lineHeight": 28.799999999999997,
                    "textAlign": "center",
                  },
                ],
              ],
            ]
          }
        >
          You will be presented
        </Text>
        <Text
          style={
            [
              {
                "color": "#FFF",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(255, 255, 255, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 14,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                    "marginVertical": 2,
                  },
                  {
                    "fontSize": 24,
                    "lineHeight": 28.799999999999997,
                    "textAlign": "center",
                  },
                ],
              ],
            ]
          }
        >
          with 10 True or False
        </Text>
        <Text
          style={
            [
              {
                "color": "#FFF",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(255, 255, 255, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 14,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                    "marginVertical": 2,
                  },
                  {
                    "fontSize": 24,
                    "lineHeight": 28.799999999999997,
                    "textAlign": "center",
                  },
                ],
              ],
            ]
          }
        >
          questions.
        </Text>
      </View>
      <View>
        <Text
          style={
            [
              {
                "color": "#FFF",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(255, 255, 255, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 14,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                    "marginVertical": 2,
                  },
                  {
                    "fontSize": 24,
                    "lineHeight": 28.799999999999997,
                    "textAlign": "center",
                  },
                ],
              ],
            ]
          }
        >
          Can you score 100%?
        </Text>
      </View>
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#fff",
            "borderColor": "transparent",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderWidth": 0,
            "elevation": 2,
            "minWidth": 64,
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 0.75,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 1.5,
          }
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "borderRadius": 4,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                {
                  "height": 60,
                  "width": 200,
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "color": "#FFF",
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  {
                    "textAlign": "left",
                  },
                  [
                    {
                      "letterSpacing": 1,
                      "marginHorizontal": 16,
                      "marginVertical": 9,
                      "textAlign": "center",
                    },
                    undefined,
                    {
                      "textTransform": "uppercase",
                    },
                    {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "500",
                    },
                    {
                      "fontFamily": "System",
                      "fontWeight": "500",
                    },
                    undefined,
                  ],
                ]
              }
            >
              BEGIN
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          [
            {
              "color": "#FFF",
              "fontFamily": "System",
              "fontWeight": "400",
            },
            {
              "textAlign": "left",
            },
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(255, 255, 255, 0.87)",
                "fontFamily": "System",
                "fontWeight": "400",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontSize": 14,
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                  "marginVertical": 2,
                },
                {
                  "paddingBottom": 10,
                  "textAlign": "center",
                },
              ],
            ],
          ]
        }
      >
        Questions by The Open Trivia Database
      </Text>
      <Text
        onPress={[Function]}
        style={
          [
            {
              "color": "#FFF",
              "fontFamily": "System",
              "fontWeight": "400",
            },
            {
              "textAlign": "left",
            },
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(255, 255, 255, 0.87)",
                "fontFamily": "System",
                "fontWeight": "400",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontSize": 14,
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                  "marginVertical": 2,
                },
                [
                  {
                    "paddingBottom": 10,
                    "textAlign": "center",
                  },
                  {
                    "color": "#fff",
                    "textDecorationLine": "underline",
                  },
                ],
              ],
            ],
          ]
        }
      >
        Game by www.LouieChristie.com
      </Text>
      <Text
        style={
          [
            {
              "color": "#FFF",
              "fontFamily": "System",
              "fontWeight": "400",
            },
            {
              "textAlign": "left",
            },
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(255, 255, 255, 0.87)",
                "fontFamily": "System",
                "fontWeight": "400",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontSize": 14,
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                  "marginVertical": 2,
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Version: 
         
         [DEV] 
      </Text>
    </View>
  </View>
</View>
`;

exports[`HomeScreen light theme 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        {
          "backgroundColor": "#FFF",
        },
      ]
    }
  >
    <RCTSafeAreaView
      style={
        [
          {
            "backgroundColor": "#0051E7",
            "elevation": 4,
            "zIndex": 0,
          },
          {
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 3,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 4,
          },
        ]
      }
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#0051E7",
            "elevation": 0,
            "flexDirection": "row",
            "height": 56,
            "marginTop": 0,
            "paddingHorizontal": 4,
          }
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          hitSlop={
            {
              "bottom": 6,
              "left": 6,
              "right": 6,
              "top": 6,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "margin": 6,
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 18,
                  "height": 36,
                  "width": 36,
                },
                undefined,
                undefined,
              ],
            ]
          }
        >
          <View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  {
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "transform": [
                      {
                        "rotate": "0deg",
                      },
                    ],
                  }
                }
              >
                <Text />
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "flex": 1,
                "paddingHorizontal": 12,
              },
              [
                {
                  "marginLeft": 8,
                },
                {
                  "alignItems": "center",
                },
                undefined,
              ],
            ]
          }
        >
          <Text
            accessibilityRole="header"
            accessibilityTraits="header"
            accessible={true}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                {
                  "textAlign": "left",
                },
                [
                  {
                    "color": "#ffffff",
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  {
                    "fontSize": 17,
                  },
                  undefined,
                ],
              ]
            }
          />
        </View>
        <View
          style={
            {
              "width": 48,
            }
          }
        />
      </View>
    </RCTSafeAreaView>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "space-around",
        }
      }
    >
      <View>
        <Text
          style={
            [
              {
                "color": "#000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "500",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 20,
                    "letterSpacing": 0.15,
                    "lineHeight": 30,
                    "marginVertical": 2,
                  },
                  {
                    "fontSize": 24,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                ],
              ],
            ]
          }
        >
          Welcome to the Trivia Challenge!
        </Text>
      </View>
      <View>
        <Text
          style={
            [
              {
                "color": "#000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 14,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                    "marginVertical": 2,
                  },
                  {
                    "fontSize": 24,
                    "lineHeight": 28.799999999999997,
                    "textAlign": "center",
                  },
                ],
              ],
            ]
          }
        >
          You will be presented
        </Text>
        <Text
          style={
            [
              {
                "color": "#000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 14,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                    "marginVertical": 2,
                  },
                  {
                    "fontSize": 24,
                    "lineHeight": 28.799999999999997,
                    "textAlign": "center",
                  },
                ],
              ],
            ]
          }
        >
          with 10 True or False
        </Text>
        <Text
          style={
            [
              {
                "color": "#000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 14,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                    "marginVertical": 2,
                  },
                  {
                    "fontSize": 24,
                    "lineHeight": 28.799999999999997,
                    "textAlign": "center",
                  },
                ],
              ],
            ]
          }
        >
          questions.
        </Text>
      </View>
      <View>
        <Text
          style={
            [
              {
                "color": "#000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 14,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                    "marginVertical": 2,
                  },
                  {
                    "fontSize": 24,
                    "lineHeight": 28.799999999999997,
                    "textAlign": "center",
                  },
                ],
              ],
            ]
          }
        >
          Can you score 100%?
        </Text>
      </View>
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#0051E7",
            "borderColor": "transparent",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderWidth": 0,
            "elevation": 2,
            "minWidth": 64,
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 0.75,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 1.5,
          }
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "borderRadius": 4,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                {
                  "height": 60,
                  "width": 200,
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "color": "#000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  {
                    "textAlign": "left",
                  },
                  [
                    {
                      "letterSpacing": 1,
                      "marginHorizontal": 16,
                      "marginVertical": 9,
                      "textAlign": "center",
                    },
                    undefined,
                    {
                      "textTransform": "uppercase",
                    },
                    {
                      "color": "#ffffff",
                      "fontFamily": "System",
                      "fontWeight": "500",
                    },
                    {
                      "fontFamily": "System",
                      "fontWeight": "500",
                    },
                    undefined,
                  ],
                ]
              }
            >
              BEGIN
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          [
            {
              "color": "#000",
              "fontFamily": "System",
              "fontWeight": "400",
            },
            {
              "textAlign": "left",
            },
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "System",
                "fontWeight": "400",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontSize": 14,
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                  "marginVertical": 2,
                },
                {
                  "paddingBottom": 10,
                  "textAlign": "center",
                },
              ],
            ],
          ]
        }
      >
        Questions by The Open Trivia Database
      </Text>
      <Text
        onPress={[Function]}
        style={
          [
            {
              "color": "#000",
              "fontFamily": "System",
              "fontWeight": "400",
            },
            {
              "textAlign": "left",
            },
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "System",
                "fontWeight": "400",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontSize": 14,
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                  "marginVertical": 2,
                },
                [
                  {
                    "paddingBottom": 10,
                    "textAlign": "center",
                  },
                  {
                    "color": "#0051E7",
                    "textDecorationLine": "underline",
                  },
                ],
              ],
            ],
          ]
        }
      >
        Game by www.LouieChristie.com
      </Text>
      <Text
        style={
          [
            {
              "color": "#000",
              "fontFamily": "System",
              "fontWeight": "400",
            },
            {
              "textAlign": "left",
            },
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "System",
                "fontWeight": "400",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontSize": 14,
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                  "marginVertical": 2,
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Version: 
         
         [DEV] 
      </Text>
    </View>
  </View>
</View>
`;
